--- a/inspection/python/re/re_cheat.ipynb
+++ b/inspection/python/re/re_cheat.ipynb
@@ -26,7 +26,20 @@
    "outputs": [],
    "source": [
     "# Email アドレス (RFC準拠ではない)\n",
-    "email = '^\\w+([-+.]\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*$'"
+    "email = '^\\w+([-+.]\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*$'\n",
+    "re.findall(email,'メールアドレスはexample@example.comです')\n",
+    "# >> example@example.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17b345e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imageUrl\n",
+    "image_url = 'https?://[\\w/:%#\\$&\\?\\(\\)~\\.=\\+\\-]+'"
    ]
   },
   {
