add address regex

--- a/inspection/python/re/re_cheat.ipynb
+++ b/inspection/python/re/re_cheat.ipynb
@@ -136,7 +136,10 @@
    "id": "43d495ec-6c27-44f1-8f9e-5c1b43fa2988",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 住所\n",
+    "address = '(...??[都道府県])((?:旭川|伊達|石狩|盛岡|奥州|田村|南相馬|那須塩原|東村山|武蔵村山|羽村|十日町|上越|富山|野々市|大町|蒲郡|四日市|姫路|大和郡山|廿日市|下松|岩国|田川|大村)市|.+?郡(?:玉村|大町|.+?)[町村]|.+?市.+?区|.+?[市区町村])(.+)'"
+   ]
   }
  ],
  "metadata": {
